--- a/l1/index.html
+++ b/l1/index.html
@@ -7,5 +7,15 @@
 </head>
 <body>
 <h1 id="h1">hello</h1>
+
+<input type="text" name="lengh" id="lengh" placeholder="довжина">
+<input type="text" name="width" id="width" placeholder="ширина">
+<input type="text" name="height" id="height" placeholder="висота">
+<input type="button" value="calculate" id="calculate">
+<p id="resalt" > </p>
+
+<br>
+
+
 </body>
 </html>
