add cons lesson 1

--- a/l1/index.html
+++ b/l1/index.html
@@ -11,7 +11,8 @@
 <input type="text" name="lengh" id="lengh" placeholder="довжина">
 <input type="text" name="width" id="width" placeholder="ширина">
 <input type="text" name="height" id="height" placeholder="висота">
-<input type="button" value="calculate" id="calculate">
+<input type="button" id="calculate" onclick="displayResalt()" value="calculate">
+<BR>
 <p id="resalt" > </p>
 
 <br>
