add arrays task

--- a/l1/index.html
+++ b/l1/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-<!--    <script src="./index.js" ></script>-->
-    <script src="./operators.js" ></script>
+    <script src="./index.js" ></script>
+<!--    <script src="./operators.js" ></script>-->
 </head>
 <body>
 <h1 id="h1">hello</h1>
