--- a/l1/index.html
+++ b/l1/index.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <script src="./index.js" ></script>
+<!--    <script src="/arrays/arrays.js"></script>-->
+<!--    <script src="/arrays/data.js"></script>-->
+<!--    <script src="./index.js" ></script>-->
 <!--    <script src="./operators.js" ></script>-->
 </head>
 <body>
